css/main.css
@-moz-viewport { width: device-width; scale: 1; }
@-ms-viewport { width: device-width; scale: 1; }
@-o-viewport { width: device-width; scale: 1; }
@-webkit-viewport { width: device-width; scale: 1; }
@viewport { width: device-width; scale: 1; }

html {
    box-sizing: border-box;

    font: normal 100%/1.5 sans-serif;
    -moz-text-size-adjust: 100%;
    -ms-text-size-adjust: 100%;
    -webkit-text-size-adjust: 100%;
    text-size-adjust: 100%;
}

*, *:before, *:after {
  box-sizing: inherit;
}

body {
    margin: 0;
}

img {
    width: 100%;
    display: block;
}

.nav{
	display: none;
}

.nav-check:checked ~ .nav {
	display: block;
}

.nav-check {
	position: absolute;
	top: -3em;
}

.nav-check:checked ~ .nav-label {
	background-color: grey;
}

.billboard {
	width: 100%;
}

.intro {
	position: relative;
}

.toggle-ab {
	position: absolute;
}

.toggle-rel {
	position: relative;
}

.toggle-img {
	width: 50px;
	height: 50px;
	margin-left: 25px;
}

.billboard-text {
	position: absolute;
	top: 5em;
	Left: 50%;
	Transform: translateX(-50%);
}

.list-group {
  	padding-left: 0;
  	list-style-type: none;
	margin-left: 10px;
	padding: 1em;
}

.list-group > li > a {
	text-decoration: none;
	color: black;
	font-size: 16px;
}

.list-group > li {
	padding: 0.5em;
	padding-left: 0;
}

.list-group-inline > li {
  display: inline-block;
}

.down-arrow {
	position: absolute;
	height: 50px;
	width: 50px;
	Left: 50%;
	Transform: translateX(-50%);
	
}

.about {
	padding-top: 4em;
	padding-bottom: 4em;
	padding-left: 2em;
	padding-right: 2em;
	background-color: grey;
}

footer {
	margin: 2em;
}

footer > h2 {
	text-align: center;
}

.mail {
	text-align: center;
}

.mail > a {
	text-decoration: none;
	color: black;
}

.media-links {
	text-align: center;
}

.media-links > a {
    width: 50px;
	padding-top: 1em;
	margin: 0.2em;
	display: inline-block;
}

.top-arrow {
	height: 50px;
	width: 50px;
	margin: 0 auto;
	margin-bottom: 0.5em;
}

.copyright {
	text-align: center;
}

.work-nav {
	text-align: center;
}

.arrow-btn {
	width: 30%;
	margin-top: 0.5em;
	display: inline-block;

}

.home-btn {
	display: inline-block;
	text-decoration: none;
	color: black;
}

.project {
	padding-top: 4em;
	padding-bottom: 4em;
	padding-left: 2em;
	padding-right: 2em;
	background-color: grey;
}

